--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Paytone+One&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap');
+
 
 $primaryColor: #352793;
 $secondaryColor: #1D4AD1;
 $primaryFont: 'Paytone One',
 sans-serif;
-$secondaryFont: 'Nunito',
+$secondaryFont: 'Roboto', sans-serif,
 sans-serif;
 
 
