--- a/src/App.scss
+++ b/src/App.scss
@@ -158,10 +158,19 @@ $primaryFont: 'Roboto', sans-serif;
         }
     }
 
-    .card-text-wrapper {
-        height: 7rem !important;
-        margin-bottom: 1rem;
+    .card {
+        .card-title {
+            font-size: 1.8rem;
+        }
+
+        .card-text-wrapper {
+            height: 7rem !important;
+            margin-bottom: 1rem;
+        }
+
     }
+
+    
 
     .me {
         .column-title {
