added a new work

--- a/src/App.scss
+++ b/src/App.scss
@@ -34,7 +34,7 @@ $primaryFont: 'Roboto', sans-serif;
     width: 4rem !important;
     height: 2.5rem !important; 
     svg {
-        height: 80%;
+        height: auto;
     }
 }
 
